First version of team project

--- a/event-react-app/src/App.css
+++ b/event-react-app/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+ul{
+  list-style-type: none;
+}
+
+.Menu {
+  display: flex;
+}
+
+.Menu > li {
+  margin: 0 auto;
+}
